--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   name             : "Jose Seok"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Happiness Together"
-  location         : "Somewhere"
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
